--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,18 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>project-root</artifactId>
-        <groupId>eu.scape-project</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>..</relativePath>
-    </parent>
+ 
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>eu.scape_project.tb</groupId>
     <artifactId>hocr-parser-hadoopjob</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <name>hocr-parser-hadoopjob</name>
-    <description>SCAPE TB LSDR hOCR parser</description>
+    <url>http://maven.apache.org</url>
+
     <properties>
-        <scape.core.version>0.0.1-SNAPSHOT</scape.core.version>
-        <org.codehaus.jackson.version>1.6.4</org.codehaus.jackson.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
         <plugins>
@@ -29,7 +26,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <!-- <mainClass>eu.scape_project.tb.lsdr.hocrparser.HocrParser</mainClass> -->
+                            <mainClass>eu.scape_project.tb.lsdr.hocrparser.HocrParser</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -43,78 +40,60 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
     <dependencies>
         <dependency>
-            <groupId>eu.scape-project</groupId>
-            <artifactId>scape-core</artifactId>
-            <version>${scape.core.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>${org.codehaus.jackson.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>${org.codehaus.jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-
-		<!-- Tika dependencies -->
-        <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-core</artifactId>
-            <version>0.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
-            <version>0.7</version>
-        </dependency>
-
-
-		<!-- Logging dependencies -->
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
-        </dependency>
-		<!--  Commons CLI to build the command line interface -->
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.apache.mahout.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
             <version>0.20.1</version>
         </dependency>
-
         <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
-            <version>1.1</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.archive.heritrix</groupId>
+            <artifactId>heritrix-commons</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.0</version>
+        </dependency>       
         
         <dependency>
 	<!-- jsoup HTML parser library @ http://jsoup.org/ -->
@@ -122,6 +101,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.6.2</version>
         </dependency>
-
+       
     </dependencies>
+    
 </project>
+
+
+
+ 
